--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Smart Partner Client Proto1用 */
-@import url(sanitize.css);
+@import url(./sanitize.css);
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 h1{
